// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders cells for passed empty field 1`] = `
.emotion-4 {
  display: block;
  padding: 10px;
  border: 2px solid lightgray;
  margin-bottom: 10px;
  background-blend-mode: multiply;
  background-color: rgba(0,0,0,0.7);
  box-shadow: 0px 16px 30px 0px #200;
}

.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
  vertical-align: top;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 2px;
  padding-bottom: 0px;
  font-size: 10px;
  line-height: 1;
  -webkit-transition: -webkit-transform 1s,background-color 1s;
  -webkit-transition: transform 1s,background-color 1s;
  transition: transform 1s,background-color 1s;
  background-color: #fff;
}

<div
  className="emotion-4"
>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <br />
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    
  </button>
</div>
`;

exports[`Field renders filled cells snapshot check 1`] = `
.emotion-4 {
  display: block;
  padding: 10px;
  border: 2px solid lightgray;
  margin-bottom: 10px;
  background-blend-mode: multiply;
  background-color: rgba(0,0,0,0.7);
  box-shadow: 0px 16px 30px 0px #200;
}

.emotion-3 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
  vertical-align: top;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 2px;
  padding-bottom: 0px;
  font-size: 10px;
  line-height: 1;
  -webkit-transition: -webkit-transform 1s,background-color 1s;
  -webkit-transition: transform 1s,background-color 1s;
  transition: transform 1s,background-color 1s;
  background-color: #fff;
}

.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
  vertical-align: top;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 2px;
  padding-bottom: 0px;
  font-size: 10px;
  line-height: 1;
  -webkit-transition: -webkit-transform 1s,background-color 1s;
  -webkit-transition: transform 1s,background-color 1s;
  transition: transform 1s,background-color 1s;
  background-color: #00ff00;
  -webkit-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  transform: rotate(360deg);
}

<div
  className="emotion-4"
>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    x
  </button>
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    o
  </button>
  <br />
  <button
    className="emotion-0"
    onClick={[Function]}
  >
    o
  </button>
  <button
    className="emotion-3"
    onClick={[Function]}
  >
    
  </button>
</div>
`;
